[gd_scene load_steps=4 format=2]

[ext_resource path="res://game/assets/hero_wizard.png" type="Texture" id=1]
[ext_resource path="res://game/assets/board_tilemap.tres" type="TileSet" id=2]
[ext_resource path="res://game/board/board.gd" type="Script" id=3]

[node name="board" type="TileMap"]
position = Vector2( 32, 48 )
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 3, 0, 0, 4, 0, 0, 6, 0, 0, 7, 0, 0, 9, 0, 0, 10, 0, 0, 12, 0, 0, 13, 0, 0, 15, 0, 0, 16, 0, 0, 18, 0, 0, 19, 0, 0, 21, 0, 0, 22, 0, 0, 24, 0, 0, 25, 0, 0, 65536, 0, 0, 65537, 0, 0, 65539, 0, 0, 65540, 0, 0, 65542, 0, 0, 65543, 0, 0, 65545, 0, 0, 65546, 0, 0, 65548, 0, 0, 65549, 0, 0, 65551, 0, 0, 65552, 0, 0, 65554, 0, 0, 65555, 0, 0, 65557, 0, 0, 65558, 0, 0, 65560, 0, 0, 65561, 0, 0, 196608, 0, 0, 196609, 0, 0, 196632, 0, 0, 196633, 0, 0, 262144, 0, 0, 262145, 0, 0, 262168, 0, 0, 262169, 0, 0, 393216, 0, 0, 393217, 0, 0, 393240, 0, 0, 393241, 0, 0, 458752, 0, 0, 458753, 0, 0, 458776, 0, 0, 458777, 0, 0, 589824, 0, 0, 589825, 0, 0, 589827, 0, 0, 589828, 0, 0, 589830, 0, 0, 589831, 0, 0, 589833, 0, 0, 589834, 0, 0, 589836, 0, 0, 589837, 0, 0, 589839, 0, 0, 589840, 0, 0, 589842, 0, 0, 589843, 0, 0, 589845, 0, 0, 589846, 0, 0, 589848, 0, 0, 589849, 0, 0, 655360, 0, 0, 655361, 0, 0, 655363, 0, 0, 655364, 0, 0, 655366, 0, 0, 655367, 0, 0, 655369, 0, 0, 655370, 0, 0, 655372, 0, 0, 655373, 0, 0, 655375, 0, 0, 655376, 0, 0, 655378, 0, 0, 655379, 0, 0, 655381, 0, 0, 655382, 0, 0, 655384, 0, 0, 655385, 0, 0 )
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="hero_battle_tweener" type="Tween" parent="."]

[node name="hero_on_the_board" type="Sprite" parent="."]
position = Vector2( 16, 16 )
texture = ExtResource( 1 )

[node name="hero_board_life" type="Label" parent="hero_on_the_board"]
margin_left = -15.0
margin_top = -25.0
margin_right = 25.0
margin_bottom = -11.0
text = "3 HP"

[connection signal="tween_all_completed" from="hero_battle_tweener" to="." method="_on_hero_battle_tweener_tween_all_completed"]
